--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
   <head></head>
   <body>
+    <svg height="200" width="200">
+      <circle r="20" cx="30" cy="30" >
+      <circle r="20" cx="130" cy="30" >
+      <circle r="20" cx="30" cy="130" >
+    </svg>
     <input id="duration" value="30">
     <button id="start">Start</button>
     <button id="pause">Pause</button>
